Alterando Aluraflix para DanielFlix

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="stylesheet" href="style.css" />
-    <title>AluraFlix</title>
+    <title>DanielFlix</title>
 </head>
 
 
@@ -10,7 +10,7 @@
 <body>
 
 
-    <header>ALURAFLIX</header>
+    <header>DANIELFLIX</header>
 
     <section class="chamada">
         <div class=" chamada-texto">
